# bipolar_disorder

./: README.md  main.py  pyproject.toml  test.py
data/: BIPOLAR DISORDER (Responses) - Form Responses 1.csv  Bipolar_Disorder_data.csv  dataset.csv
