[tool.poetry]
name = "bipolar-disorder"
version = "0.1.0"
description = ""
authors = ["sand194 <108941271+bbingo4@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
